erDiagram

    %% =============================================
    %% Relationships
    %% =============================================

    %% Product Suite relationships
    PRODUCT_SUITES_INFO ||--o{ PRODUCT_INFO : "has"
    PRODUCT_SUITES_INFO ||--o{ PRODUCT_SUITE_CONFIG : "configures"

    %% Product relationships
    PRODUCT_INFO ||--o{ ROLE_MAP : "has_roles"
    PRODUCT_INFO ||--o{ PRODUCT_CONFIG : "has config"
    PRODUCT_INFO ||--o{ RELEASE_UNIT_INFO : "contains"

    %% Release Unit relationships
    RELEASE_UNIT_INFO ||--o{ RELEASE_UNIT_CONFIG : "has config"
    RELEASE_UNIT_INFO }o--|| RP_MAP : "mapped to"
    RELEASE_UNIT_INFO ||--o{ PAAS_DEPLOY_UNIT : "deployed"
    RELEASE_UNIT_INFO ||--o{ PAAS_RLSE_INFO : "has release info"

    %% Release Product and Package relationships
    release_packages ||--o{ rp_ru_mapping : "contains"
    rp_ru_mapping }o--|| RELEASE_UNIT_INFO : "maps to"

    %% PaaS relationships
    PAAS_DEPLOY_UNIT ||--o{ PAAS_DEPLOY_STATUS : "has status"

    %% =============================================
    %% Entity Definitions
    %% =============================================

    %% ----- Product Suite Entities -----

    PRODUCT_SUITES_INFO {
        VARCHAR PROD_SUITE_ID PK "Primary Key"
        VARCHAR PROD_SUITE_NAME ""
        VARCHAR PROD_SUITE_OWNER_NT_ACCT ""
        VARCHAR PROD_SUITE_SITE_OWNER_ACCT ""
        VARCHAR DIVISION ""
        DATETIME CREATED_AT ""
        DATETIME UPDATED_AT ""
    }

    PRODUCT_SUITE_CONFIG {
        VARCHAR PROD_SUITE_CONFIG_ID PK "Primary Key"
        VARCHAR PROD_SUITE_ID FK "References"
        VARCHAR PROD_SUITE_CONFIG_PARAM ""
        VARCHAR PROD_SUITE_CONFIG_VAL ""
        DATETIME CREATED_AT ""
        DATETIME UPDATED_AT ""
    }

    %% ----- Product Entities -----

    PRODUCT_INFO {
        VARCHAR PROD_ID PK ""
        VARCHAR PROD_NAME ""
        VARCHAR PROD_SHORT_NAME ""
        VARCHAR MGR_NT_ACCT ""
        VARCHAR PROD_OWNER_NT_ACCT ""
        VARCHAR PROD_PLAT_NAME ""
        VARCHAR PROD_NAME_ALIAS ""
        VARCHAR PROD_SUITE_ID FK "References"
        DATETIME CREATED_AT ""
        DATETIME UPDATED_AT ""
    }

    PRODUCT_CONFIG {
        VARCHAR CONFIG_ID PK "Primary Key"
        VARCHAR PROD_ID FK "References"
        VARCHAR PROD_CONFIG_PARAM ""
        VARCHAR PROD_CONFIG_VAL ""
        DATETIME CREATED_AT ""
        DATETIME UPDATED_AT ""
    }

    ROLE_MAP {
        VARCHAR ID PK "Primary Key"
        VARCHAR PROD_ID FK "References"
        VARCHAR SITE ""
        VARCHAR ACCT ""
        VARCHAR TYPE ""
        VARCHAR ORG_CODE ""
        VARCHAR ROLE_NAME ""
        DATETIME CREATED_AT ""
        DATETIME UPDATED_AT ""
    }

    %% ----- Release Unit Entities -----

    RELEASE_UNIT_INFO {
        VARCHAR AP_ID PK "Primary Key"
        VARCHAR PROD_ID FK "References"
        VARCHAR AP_NAME ""
        VARCHAR DEV_NT_ACCT ""
        DATETIME CREATED_AT ""
        DATETIME UPDATED_AT ""
    }

    RELEASE_UNIT_CONFIG {
        VARCHAR AP_CONFIG_ID PK "Primary Key"
        VARCHAR AP_ID FK "References"
        VARCHAR AP_CONFIG_PARAM ""
        VARCHAR AP_CONFIG_VAL ""
        DATETIME CREATED_AT ""
        DATETIME UPDATED_AT ""
    }

    %% ----- Release Product / Package Entities -----   

    RP_MAP {
        VARCHAR RU_ID PK,FK "References RELEASE_UNIT_INFO"
        VARCHAR RP_ID PK,FK "References release_packages"
        DATETIME CREATED_AT ""
        DATETIME UPDATED_AT ""
    }

    %% ----- PaaS Entities -----

    PAAS_DEPLOY_UNIT {
        VARCHAR UNIT_ID PK "Primary Key"
        VARCHAR AP_ID FK "References"
        DATETIME CREATED_AT ""
        DATETIME UPDATED_AT ""
    }

    PAAS_DEPLOY_STATUS {
        VARCHAR STATUS_ID PK "Primary Key"
        VARCHAR UNIT_ID FK "References PAAS_DEPLOY_UNIT"
        VARCHAR STATUS ""
    }
    
    %% ----- RP_RU1 Entities -----

    rp_ru_mapping {
        INT release_unit_id PK, FK "References RELEASE_UNIT_INFO"
        INT release_package_id PK, FK "References release_packages"
        BOOLEAN is_deleted ""
    }

    release_packages {
        INT id PK
        INT prod_id FK "References PRODUCT_INFO"
        VARCHAR name ""
        VARCHAR acronym ""
        VARCHAR ap_level ""
        JSON owner ""
        TEXT cd_details ""
        INT old_rp_id ""
        VARCHAR change_level ""
        INT version ""
        BOOLEAN is_deleted ""
    }